src/core-crm/objects/Questionnaire__c/Questionnaire__c.object-meta.xml
<CustomObject>
    <description>This will capture the list of questions/answers against a record.</description>
    <label>Questionnaire</label>
    <nameField>
        <displayFormat>QN-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>