src/core-crm/objects/Questionnaire__c/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <description>This will capture the type of record the questionnaire will attached to. Ex. Product, Account, Lead.</description>
    <label>Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>