src/core-crm/objects/Questionnaire__c/fields/Parent_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record_ID__c</fullName>
    <description>This will capture the actual Salesforce ID of the parent record. This will be an external ID to cater different types of objects.</description>
    <externalId>true</externalId>
    <label>Parent Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>