src/core-crm/objects/Questionnaire__c/fields/Questionnaire_Type__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Type__c</fullName>
    <description>Types of questionnaire the users can create.</description>
    <label>Questionnaire Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registration Criteria</fullName>
            </value>
            <value>
                <fullName>Registration Questions</fullName>
            </value>
            <value>
                <fullName>Application Questions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>